# Bobby_Carrot_Python

./: .gitignore  CLAUDE.md  README.md  bobby_carrot_rl.ipynb  bobby_carrot_rl_colab.ipynb  pyproject.toml  rl_game_training.ipynb
Project_Summary/: summary_1.txt
bobby_carrot/: bench.py  env.py  game.py  gym_env.py  renderer.py
bobby_carrot/core/: loader.py  logic.py  state.py
game/bobby_carrot/: __init__.py  game.py
rl_training/: __init__.py  audit_rewards.py  callbacks.py  config.py  evaluate.py  evaluate_gui.py  extractor.py  potential.py  train.py  wrappers.py
